# frappe-login-session-defaults-popup

./: MANIFEST.in  README.md  pyproject.toml  setup.py
frappe_login_session_defaults_popup/: __init__.py  hooks.py  modules.txt  override.py
frappe_login_session_defaults_popup/api/: session.py
frappe_login_session_defaults_popup/config/: desktop.py  docs.py
frappe_login_session_defaults_popup/public/: build.json
frappe_login_session_defaults_popup/public/js/: session_defaults_popup.bundle.js  session_defaults_popup.js
frappe_login_session_defaults_popup/public/js/utils/: utils.js
