[project]
name = "frappe_login_session_defaults_popup"
authors = [
    {name = "Ameen Ahmed (Level Up)", email = "kid1194@gmail.com"}
]
description = "Frappe plugin that shows the session defaults popup after login."
keywords = ["frappe", "erpnext"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript"
]
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=13.0.0"
]

[project.urls]
Documentation = "https://github.com/kid1194/frappe-login-session-defaults-popup"
Source = "https://github.com/kid1194/frappe-login-session-defaults-popup"
